--- a/pages/portfolio.css
+++ b/pages/portfolio.css
@@ -87,3 +87,150 @@ nav ul li a:hover{
 .btn:hover{
     transform:scale(1.2)
 }
+
+.masthead-intro {
+    margin-bottom: 0.1em;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 2em;
+  }
+  
+  .masthead-heading {
+    margin-top: -0.2em;
+    font-family: 'Shadows Into Light', cursive;
+    font-weight: bold;
+    font-size: 6em;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+  }
+  
+  .content-footer,
+  .introduction, 
+  .location, 
+  .questions {
+    max-width: 38em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2em;
+  }
+  
+  .questions {
+    padding-bottom: 1.5em;
+  }
+  
+  /* -------------------------
+      Portfolio
+     -------------------------*/
+  
+  li {
+      list-style: none;
+     }
+  
+  #container {
+    background-color: grey;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+      
+  }
+  .box {
+    float:left;
+    width:31%;
+    margin:1% 1% 93px 1%;
+  }
+  
+  .box img {
+    width: 100%;
+    display: block;
+    border-style: solid;
+    border-width:1.5px;
+  }
+  
+  button {
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .btn {
+    background-color: #a1a1a1;
+    border-color: #a1a1a1;
+    border-style: none;
+    border-radius: 0.3em;
+    font-size: 1em;
+    text-shadow: none;
+    height: 3.3em;
+    width: 9.6em;
+    margin-left: 30%;
+    margin-top: 5%;
+  }
+  
+  .btn:hover {
+    background-color: #282828;
+  }
+
+  .social {
+    padding: 0;
+    list-style: none;
+  }
+  
+  section > h1 {
+    margin-top: 2em;
+  }
+  
+  .social > li {
+    display: inline-block;
+    padding-right: 1em; 
+  }
+  
+  .content-footer > p {
+    color: white;
+  }
+  
+  .content-footer > a {
+    margin-right: 0.1em;
+  }
+  
+  .content-footer {
+    background-color: #282828;
+    max-width: 100%;
+    padding: 4em 0;
+  }
+
+
+.html {
+    width: 80%;
+}
+
+.php {
+    width: 60%;
+}
+
+.Javascript{
+    width: 30%;
+}
+
+
+
+  @media only screen and (max-width: 500px) {
+    .img-responsive {
+      /*margin-top: -1em;*/
+    }
+    .box:nth-child(1n+2) {
+      border-top: 3px solid #a1a1a1;
+      padding-top: 3em;
+    }
+    .box {
+     display: block;
+     width: 75%;
+     padding-left: 2em;
+     padding-top: 0;
+   }
+   .content-footer {
+    font-size: 0.8em;
+  }
+  .masthead {
+    padding: 3em 0; 
+  }
+  .masthead-heading {
+    font-size: 3em;
+  }
+}
