need final touch

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -158,3 +158,34 @@ h4{
     top: 6px;
     right: 6px;
 }
+
+
+.images-selection img{
+    width: 100%;
+    height:auto;
+    display: block;
+    margin: auto;
+}
+
+.container .title h1{
+    text-align: center;
+    font-size: 30px;
+}
+
+.container .article .button{
+    text-align: center;
+}
+
+.container .article .button a{
+    padding: 6px 15px ;
+    font-size: 16px;
+
+}
+
+.container .social i{
+    font-size: 19px;
+    height:35px;
+    width:35px;
+    line-height: 35px;
+
+}
